# fixed_income_dashboard

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: automated_deployment.yml  main.yml
config/: pyproject.toml
config/config/: config_variables.py
data/: aaa.parquet  baa.parquet  dgs1.parquet  dgs10.parquet  dgs1mo.parquet  dgs2.parquet  dgs20.parquet  dgs30.parquet  dgs3mo.parquet  dgs5.parquet  dgs6mo.parquet  dgs7.parquet  t10y2y.parquet  test.ipynb
services/data_ingestion/: fetch_bond_data.py  pyproject.toml
tests/: test.py
